--- a/Front-end/src/assets/index.html
+++ b/Front-end/src/assets/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=K2D:100,200,300,400,500,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
     <!-- <style type="text/css">
         html,
         body {
@@ -200,7 +201,7 @@
         }
     </style> -->
     <title>Document</title>
-    <style>
+    <!-- <style>
         .loader:empty {
             border: 5px solid #333;
             border-radius: 30px;
@@ -251,14 +252,15 @@
                 transform: rotate(360deg);
             }
         } */
-    </style>
+    </style> -->
 </head>
 
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
-    <div id="t" class="loader"></div>
+    <!-- <div id="t" class="loader"></div> -->
+    <div id="t"></div>
     <!-- <div class="sk-cube-grid">
             <div class="sk-cube sk-cube1"></div>
             <div class="sk-cube sk-cube2"></div>
