--- a/Front-end/src/assets/index.html
+++ b/Front-end/src/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=K2D:100,200,300,400,500,600,700,800" rel="stylesheet">
@@ -18,5 +19,4 @@
     </noscript>
     <div id="t"></div>
 </body>
-
 </html>
