--- a/Front-end/src/assets/index.html
+++ b/Front-end/src/assets/index.html
@@ -15,8 +15,9 @@
 
 <body>
     <noscript>
-        You need to enable JavaScript to run this app.
+        Bạn cần bật JavaScript để có thể sử dụng website!
     </noscript>
     <div id="t"></div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script> 
 </body>
 </html>
