--- a/Front-end/src/assets/index.html
+++ b/Front-end/src/assets/index.html
@@ -26,7 +26,7 @@
         opacity: 0;
         }
         .ipl-progress-indicator {
-        background-color: #f5f5f5;
+        background-color: #ffffff;
         width: 100%;
         height: 100%;
         position: fixed;
@@ -178,7 +178,8 @@
           <div class="second-indicator"></div>
         </div>
         <div class="insp-logo-frame" align='center'>
-            <i class="fa fa-spinner fa-spin fa-3x fa-fw" style="color: #08c; font-size: 30px;"></i>
+            <!-- <i class="fa fa-spinner fa-spin fa-3x fa-fw" style="color: #08c; font-size: 50px;"></i> -->
+            <img src="http://demo.winmarket.id/assets/images/loading_animation.gif" alt=""> 
         </div>
       </div>
     <div id="t"></div>
